HELLODATA-2840 - redundant Transactional removal